{
    "name": "Player1 Controls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "ddbe507d-4113-4797-9ef3-64cf38dedfaa",
            "actions": [
                {
                    "name": "P1_Movement",
                    "type": "PassThrough",
                    "id": "f9d25ef1-f968-4f61-aebc-b41ac362057e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P2_Movement",
                    "type": "Value",
                    "id": "c96a5019-7551-4e66-b516-eb3451a0e2fa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "53b83169-266f-4a24-84b7-289d2f4240df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump_P2",
                    "type": "Button",
                    "id": "3160e021-74dd-471b-a632-746df79a663b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "27b878da-a45d-4b01-aabb-b52b063a553b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "7b990f1e-3c04-4d97-aaab-68733d4519bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack_P2",
                    "type": "Button",
                    "id": "e3ddc2c0-bd8f-49e2-8f08-afa7f2533d64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P1_SPbtnQ",
                    "type": "Button",
                    "id": "3c5fe49f-b33d-454b-8625-61727d513719",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P2_SPbtnUP",
                    "type": "Button",
                    "id": "bb980cd7-cefa-4c7b-b370-8b45681a3f38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SPbtnRIGHT",
                    "type": "Button",
                    "id": "365ab88f-8c13-45c6-9fa8-a678008fe1ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SPbtnLEFT",
                    "type": "Button",
                    "id": "0cdd5188-db65-49f9-bef6-725b690dfc4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "ee144ba6-3147-4aad-8af3-9239b06c4ac6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e2ec19bc-45d0-4881-a9ff-485b2011fc18",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e89b4dbd-e1b9-4a23-abd1-386af22940c2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1779dbd7-9e05-4b45-aeb3-69e99963419b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e3c1d1b4-efd2-4a21-b596-405c8a9bbb3c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ffce6e75-8c18-4f14-af90-77799ac303cd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1228f78f-2f44-4c0c-884b-41dd914a49f4",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a85a9675-c5b2-4aed-a0e6-e8c9de4ea8c6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4fe7c25-db2c-4cd6-92c7-ef066926da15",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_SPbtnQ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6207bca3-5a2b-43b8-b20d-170d31821ddd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SPbtnLEFT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f86c57f0-a2f1-4fad-bd50-b68d1f25778b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SPbtnRIGHT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e360003-d5b5-4fcd-8e54-f78ee12ebceb",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_SPbtnUP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Joystick",
                    "id": "e441e4b6-00e3-4e0b-a4c0-8af6ab361087",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dda00e12-cf56-436d-8176-230d7f1d3540",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "15e4e731-2a7a-4343-9421-26deae36161d",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e34f54fd-88bd-425a-93a0-4b28dd52828f",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fe4d2428-25c7-4224-9a56-5bd437aa2588",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKeys",
                    "id": "0d47e227-6726-4b93-8d93-203245e10718",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "594b1c23-6eaa-4def-924a-2ef6b646b393",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3dbf7e8e-e1c1-4943-b342-8d0463870d14",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fde62c11-6f22-4893-a607-09cefad0824a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f090e593-1841-4392-9e31-60902aaec0ea",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2fed7525-45b0-4ac7-89e2-d346c0978372",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack_P2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d74d7d7d-e747-4aad-b5b8-30762d1a3a5f",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack_P2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c8a5639-d291-4be6-bec4-ff8c28da9c6f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump_P2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0531f6f7-8f78-4f6b-9e7a-75899c06c045",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump_P2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2_Movement",
            "id": "7981ef97-393e-47e4-9633-20b636868d7d",
            "actions": [
                {
                    "name": "Dash_P2",
                    "type": "Button",
                    "id": "0af3cf4a-3caa-486d-a18e-8d4f940747e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "18d102bc-0bc9-4146-a1f8-93ece9671deb",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash_P2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Camera",
            "id": "2125e625-7b37-4180-a535-aece413e4b38",
            "actions": [
                {
                    "name": "Cam Movement",
                    "type": "PassThrough",
                    "id": "09049bed-68ff-41c0-8431-c7f2cc88cac3",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Mouse",
                    "id": "9a00c31c-12de-4ea0-961b-ea45967e5ec9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e3e8e967-c37e-41fc-ae5b-cd1c6d0ec218",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2bdabc7f-78be-4361-aef7-63877ea231d0",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b95845b2-b2c1-4240-80ee-a1b059e1a6e1",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "be2777bb-6651-44f6-825c-aaf954a79ff5",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}