{
    "name": "Player2_Controls",
    "maps": [],
    "controlSchemes": []
}